# movie_db

./: .gitignore  import_movies.py  pyproject.toml  requirements.txt  test.py  test2.py
archives/: barcodes.ini  config.yml  defaults.yml  genres.ini  groups.yml  movies.csv  movies.yml  tech_specs.ini
mvdb/: __init__.py  data.py  exceptions.py  framework.py  tools.py
mvdb/tasks/: __init__.py  package_marquee.py
user_input/: movie_import_template.csv
utils/: add_movies.py  import_movies.py  update_sort_keys.py
