[project]
name = "mvdb"
version = "0.1.0"
description = "Nornir database of my Blu-Ray & 4K UHD movie collection"
# authors = [
#     {name = "Your Name",email = "you@example.com"}
# ]
# readme = "README.md"
requires-python = "^3.12"


[tool.poetry.dependencies]
nornir = "^3.4.1"
pyyaml = "^6.0.0"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
